--- a/demo.html
+++ b/demo.html
@@ -16,9 +16,24 @@
 		<div id="imgs-box">
 		</div>
 	</div>
+
+	<!-- 进度条 -->
+	<section id="step">
+	  <article>
+	    <h5 class="title">照片载入进度<span>[Total: <em id="img-total-box">0</em>]</span></h5>
+	    <div class="number-pb">
+	      <div class="number-pb-shown dream"></div>
+	      <div class="number-pb-num" id="current-box">0</div>
+	    </div>
+	  </article>
+	</section>
+	<!-- 进度条 -->
 	
+
 	<script src="http://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
 	<script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src="./other/jquery.velocity.min.js"></script>
+	<script src="./other/number-pb.js"></script>
 	<script src="./dest/jQuery.myGreatWall.js"></script>
 </body>
 </html>
