--- a/demo.html
+++ b/demo.html
@@ -20,7 +20,7 @@
 	<!-- 进度条 -->
 	<section id="step">
 	  <article>
-	    <h5 class="title">照片载入进度<span>[Total: <em id="img-total-box">0</em>]</span></h5>
+	    <h5 class="title">加载进度<span>[共：<em id="img-total-box">0</em>]</span>张</h5>
 	    <div class="number-pb">
 	      <div class="number-pb-shown dream"></div>
 	      <div class="number-pb-num" id="current-box">0</div>
