--- a/demo.html
+++ b/demo.html
@@ -12,28 +12,21 @@
 	<link href="./dest/style.css" rel="stylesheet">
 </head>
 <body>
+
+
 	<div class="container">
 		<div id="imgs-box">
 		</div>
 	</div>
 
-	<!-- 进度条 -->
-	<section id="step">
-	  <article>
-	    <h5 class="title">加载进度<span>[共：<em id="img-total-box">0</em>]</span>张</h5>
-	    <div class="number-pb">
-	      <div class="number-pb-shown dream"></div>
-	      <div class="number-pb-num" id="current-box">0</div>
-	    </div>
-	  </article>
-	</section>
-	<!-- 进度条 -->
-	
+	<div class="progress" id="progress-bar">
+		<div class="progress-bar progress-bar-light progress-bar-striped" role="progressbar" aria-valuenow="90" aria-valuemin="6" aria-valuemax="100" style="width: 0%">0%
+		</div>
+	</div>
+
 
 	<script src="http://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
 	<script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="./other/jquery.velocity.min.js"></script>
-	<script src="./other/number-pb.js"></script>
 	<script src="./dest/jQuery.myGreatWall.js"></script>
 </body>
 </html>
